<resources>
    <string name="app_name">Exercice4Internationalosation</string>
    <string name="nom">Nom</string>
    <string name="votre_nom">Votre Nom</string>
    <string name="prenom">Prénom</string>
    <string name="votre_prenom">Votre prenom</string>
    <string name="age">Age</string>
    <string name="votre_age">Votre age</string>
    <string name="domaine_comp">Domaine de compétence</string>
    <string name="telephone">Téléphone</string>
    <string name="domaine_compet">Domaine</string>
    <string name="numero">Votre numéro</string>
    <string name="titre">Internalisation</string>
    <string name="titre2">vue (interface) en JAVA</string>
    <string name="valider">Valider</string>
    <string name="pr_cedent">Précedent</string>
    <string name="suivant">Suivant</string>
    <string name="activit_2">Activité 2</string>
    <string name="activit_3">Activité3</string>
    <string name="passer_un_appel_t_l_phonique">Passer un appel Téléphonique</string>
    <string name="exp_06_04_79_71_49">Exp: 06 04 79 71 49</string>
    <string name="appeler">Appeler</string>
</resources>