<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3">

    <LinearLayout
        android:id="@+id/idLinearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/idPrevious">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activit_3"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center_horizontal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/ic_phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/passer_un_appel_t_l_phonique"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/ed_number_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exp_06_04_79_71_49"
            android:textAlignment="center"
            android:inputType="phone"
            android:gravity="center_horizontal" />
    </LinearLayout>
    <Button
        android:id="@+id/idPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pr_cedent"
        app:layout_constraintEnd_toStartOf="@+id/idCall"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/idCall"
        app:layout_constraintBottom_toTopOf="@id/idLinearlayout"/>

    <Button
        android:id="@+id/idCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appeler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/idPrevious"
        app:layout_constraintTop_toTopOf="@id/idPrevious" />


</androidx.constraintlayout.widget.ConstraintLayout>